--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,12 @@ nav {
 .card-content {
   flex-grow: 1;
 }
+
+img, iframe {
+  max-width: 100%;
+}
+
+iframe {
+  width: 600px;
+  height: 350px;
+}
